[package]
name = "tcprelay"
version = "0.1.0"
authors = ["kromych"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3"
log = "0.4"
uuid = { version = "0.8", features = ["guid", "v4"] }
mio = { version = "0.7", features = ["os-poll", "os-ext", "net"] }
